<resources>
    <string name="app_name">My Application</string>
    <string name="_1_run">1 Run</string>
    <string name="_2_runs">2 runs</string>
    <string name="_3_runs">3 runs</string>
    <string name="_4_runs">4 runs</string>
    <string name="_6_runs">6 runs</string>
    <string name="wide">wide</string>
    <string name="no_ball">no ball</string>
    <string name="out">out</string>
    <string name="extras">extras</string>
    <string name="boundaries">boundaries</string>
    <string name="score">Score</string>
    <string name="start_again">Start again</string>
    <string name="cricket_score_app_by_a_r_tarini">Cricket Score App - By A.R Tarini</string>
    <string name="cricket_score_app_by__a_r_tarini">Cricket Score App - by A.R. Tarini</string>
    <string name="cricket_score_app_by___a_r_tarini">Cricket Score App - by A.R Tarini</string>
</resources>
